# AIchatbot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
config/: .env.example
docs/: README.md  architecture.md  current-development-status.md  current-stage-tasks.md  development-context-current-state-retrieval-design.md  future-runtime-architecture.md  local-static-sticker-library-design.md  main-agent-command-capability-audit.md  main-agent-document-artifact-design.md  main-agent-external-read-security-design.md  main-agent-first-readonly-work-task-design.md  main-agent-system-diagnostics-report-design.md  main-agent-useful-development-context-report-design.md  napcatqq-setup.md  owner-console-diagnostics-usability-design.md  owner-console-fastapi-smoke-runbook.md  owner-console-http-surface-audit.md  owner-console-manual-diagnostics-design.md  owner-console-reliability-usability-design.md  plan-c-nonebot.md  project-rag-document-state-consistency-audit.md  project-rag-usage.md  push-to-github.md  reliability-failure-taxonomy-and-inspection.md  restart-context-2026-06-28.md  runbook.md  runlog-2026-06-28.md  runlog-2026-06-30.md  runlog-2026-07-01.md  runlog-2026-07-02.md  v0.2-access-control.md  v0.3-sqlite-memory.md  v0.4-memory-compression.md  v0.5-long-term-memory.md  v0.6-persona-expression.md  v0.7-group-auto-reply.md  v0.8-owner-notifications.md  v0.9-vision-image-context.md  v1.0-diagnostics-and-operations.md  v1.1-voice-output-draft.md  (+16 more)
prompts/: system.md
scripts/: clean_japanese_history.py  diagnose.ps1  ensure-ollama.ps1  install-napcat.ps1  (+15 more)
(+206 files in other folders)
