[project]
name = "aichatbot"
version = "0.1.0"
description = "A QQ AI chatbot powered by NoneBot2, OneBot, and DeepSeek."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.nonebot]
plugins = ["src.plugins.ai_chat"]
plugin_dirs = []
builtin_plugins = []
