[project]
name = "aichatbot"
version = "0.1.0"
description = "A QQ AI chatbot powered by NoneBot2, OneBot, and DeepSeek."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # tavily_http_transport uses httpcore's AutoBackend implementation path;
    # keep the reviewed compatibility window explicit until that API is public.
    "httpcore>=1.0.9,<1.1",
    "httpx>=0.28.1,<0.29",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "openai>=1.0.0",
    "pillow>=12.0,<13",
    "python-docx>=1.2,<2",
    "python-pptx>=1.0,<2",
    "python-dotenv>=1.0.0",
]

[tool.nonebot]
plugins = ["src.plugins.ai_chat"]
plugin_dirs = []
builtin_plugins = []
